--- a/CensoWeb/src/main/webapp/index.xhtml
+++ b/CensoWeb/src/main/webapp/index.xhtml
@@ -1,12 +1,40 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:p="http://primefaces.org/ui">
     <h:head>
         <title>Uso Comercial</title>
     </h:head>
     <h:body>
-     
+        <div align="center">
+            <p:graphicImage name="img/banner.png" class="img-responsive"/>
+        </div>
+        
+        <div align="center">
+            <h:form id="formMenu">
+                <p:menubar>
+                    <p:menuitem value="Inicio" url="index.xhtml" icon="pi pi-home"/>
+                    <p:submenu label="Encuestas">
+                        <p:menuitem value="Encuestadores" url="encuestador.xhtml"/>
+                        <p:menuitem value="Encuestas" url="#"/>
+                    </p:submenu>
+                <p:submenu label="Predios">
+                        <p:menuitem value="Uso Comercial" url="uso_comercial.xhtml"/>
+                        <p:menuitem value="Predios" url="#"/>
+                </p:submenu>
+                <p:submenu label="Suscriptores">
+                        <p:menuitem value="Suscriptores" url="suscriptor.xhtml"/>
+                        <p:menuitem value="Servicios" url="#"/>
+                </p:submenu>
+                <p:menuitem value="Cerrar Sesión" url="#" icon="pi pi-sign-out"/>
+                </p:menubar> 
+            </h:form>
+        </div>
+            <br/>
+        <div align="center">
+            <p:graphicImage name="img/principal.png" class="img-responsive"/>
+        </div>
     </h:body>
 </html>
 
