vista predio y servicio

--- a/CensoWeb/src/main/webapp/index.xhtml
+++ b/CensoWeb/src/main/webapp/index.xhtml
@@ -21,11 +21,11 @@
                     </p:submenu>
                 <p:submenu label="Predios">
                         <p:menuitem value="Uso Comercial" url="uso_comercial.xhtml"/>
-                        <p:menuitem value="Predios" url="#"/>
+                        <p:menuitem value="Predios" url="predio.xhtml"/>
                 </p:submenu>
                 <p:submenu label="Suscriptores">
                         <p:menuitem value="Suscriptores" url="suscriptor.xhtml"/>
-                        <p:menuitem value="Servicios" url="#"/>
+                        <p:menuitem value="Servicios" url="servicio.xhtml"/>
                 </p:submenu>
                 <p:menuitem value="Cerrar Sesión" url="#" icon="pi pi-sign-out"/>
                 </p:menubar> 
