view servicio;login y encuesta

--- a/CensoWeb/src/main/webapp/index.xhtml
+++ b/CensoWeb/src/main/webapp/index.xhtml
@@ -17,7 +17,7 @@
                     <p:menuitem value="Inicio" url="index.xhtml" icon="pi pi-home"/>
                     <p:submenu label="Encuestas">
                         <p:menuitem value="Encuestadores" url="encuestador.xhtml"/>
-                        <p:menuitem value="Encuestas" url="#"/>
+                        <p:menuitem value="Encuestas" url="encuesta.xhtml"/>
                     </p:submenu>
                 <p:submenu label="Predios">
                         <p:menuitem value="Uso Comercial" url="uso_comercial.xhtml"/>
