--- a/CensoWeb/src/main/webapp/servicio.xhtml
+++ b/CensoWeb/src/main/webapp/servicio.xhtml
@@ -20,7 +20,7 @@
                 
                 <p:submenu label="Encuestas">
                     <p:menuitem value="Encuestadores" url="encuestador.xhtml"/>
-                    <p:menuitem value="Encuestas" url="#" />
+                    <p:menuitem value="Encuestas" url="encuesta.xhtml" />
                 </p:submenu>
                 
                 <p:submenu label="Predios">
