--- a/CensoWeb/src/main/webapp/login.xhtml
+++ b/CensoWeb/src/main/webapp/login.xhtml
@@ -2,10 +2,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
         <title>Login</title>
         <h:outputStylesheet name="css/estilo.css"/>
+         <f:event type="preRenderView" listener="#{loginView.validateSession()}"/>
     </h:head>
     <h:body>
         <div class="ui-fluid" align="center">
@@ -16,7 +18,7 @@
                     </div>
                 </div>
                 <div class="ui-grid-row">
-                    <div class="ui-grid-col-12" align="center">
+                    <div class="ui-grid-col-6" align="center">
                         <h:form id="form">
                             <p:panel header="Login" id="panel">
                                 <p:messages id="mensaje" showDetail="true" closable="true"/>
@@ -25,22 +27,22 @@
                                         <h:outputText value="Nombre:"/>
                                     </div>
                                 </div>
-                                <div class="ui-grid-col-12 top-buffer">
+                                <div class="ui-grid-row top-buffer">
                                     <div class="ui-grid-col-12">
                                         <p:inputText id="txtNombre" binding="#{loginView.txtNombre}"/>
                                     </div>
                                 </div>
-                                <div class="ui-grid-col-12 top-buffer">
+                                <div class="ui-grid-row top-buffer">
                                     <div class="ui-grid-col-12">
                                         <h:outputText value="Contraseña:"/>
                                     </div>
                                 </div>
-                                <div class="ui-grid-col-12 top-buffer">
+                                <div class="ui-grid-row top-buffer">
                                     <div class="ui-grid-col-12">
                                         <p:password id="password" binding="#{loginView.password}"/>
                                     </div>
                                 </div>
-                                <div class="ui-grid-col-12 top-buffer">
+                                <div class="ui-grid-row top-buffer">
                                     <div class="ui-grid-col-12">
                                         <p:commandButton id="btnLogin" action="#{loginView.login()}" update="form" value="Logeando" styleClass="ui-button-success"/>
                                     </div>
